--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Homenaje&display=swap');
 
 :root {
   --primary-color: #022840;
